--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5000:80"
     environment:
-      POSTGRES_SERVICE_HOST: postgres
+      DB_HOST: postgres
     links: [postgres]
     command: [script/wait-for-postgres.sh, script/start.sh]
      
