switch in gemfile for postgres and mysql

--- a/env.sample
+++ b/env.sample
@@ -1,3 +1,9 @@
+# DB SETTINGS
+# to use elektra with mysql
+# 0. set DB_TYPE to mysql
+# 1. rename config/database_mysql.yml to config/database.yml
+# 2. rename db/schema_mysql.rb to db/schema.rb
+DB_TYPE=postgres
 DB_HOST=localhost
 
 # Rails development port
